add provider service
