# gateway/internal/handler/service.go
@@ -3,14 +3,14 @@ package handler
 import (
 	"context"
 
-	"github.com/Astemirdum/library-service/pkg/circuit_breaker"
-
 	"github.com/Astemirdum/library-service/gateway/internal/model"
-	"github.com/labstack/echo/v4"
-
 	"github.com/Astemirdum/library-service/gateway/internal/service/library"
+	"github.com/Astemirdum/library-service/gateway/internal/service/provider"
 	"github.com/Astemirdum/library-service/gateway/internal/service/rating"
 	"github.com/Astemirdum/library-service/gateway/internal/service/reservation"
+	"github.com/Astemirdum/library-service/gateway/internal/service/stats"
+	"github.com/Astemirdum/library-service/pkg/circuit_breaker"
+	"github.com/labstack/echo/v4"
 )
 
 //go:generate go run github.com/golang/mock/mockgen -source=service.go -destination=mocks/mock.go
@@ -19,7 +19,15 @@ var (
 	_ LibraryService     = (*library.Service)(nil)
 	_ RatingService      = (*rating.Service)(nil)
 	_ ReservationService = (*reservation.Service)(nil)
+	_ StatsService       = (*stats.Service)(nil)
+	_ ProviderService    = (*provider.Service)(nil)
 )
+
+type ProviderService interface {
+	Register(c echo.Context) ([]byte, int, error)
+	Authorize(c echo.Context) ([]byte, int, error)
+	CB() circuit_breaker.CircuitBreaker
+}
 
 type LibraryService interface {
 	GetLibraries(c echo.Context) ([]byte, int, error)
@@ -32,7 +40,8 @@ type LibraryService interface {
 
 type RatingService interface {
 	GetRating(ctx context.Context, userName string) (model.Rating, int, error)
-	Rating(ctx context.Context, userName string, stars int) (int, error)
+	Rating(ctx context.Context, stars int) (int, error)
+	CreateRating(ctx context.Context, userName string, stars int) (int, error)
 	CB() circuit_breaker.CircuitBreaker
 }
 
